Resolve nav flicker on page load

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,7 +1,4 @@
 /* KP Header - 3-tier navigation */
-header {
-  height: auto;
-}
 
 header .nav-wrapper {
   width: 100%;
