--- a/styles/styles.css
+++ b/styles/styles.css
@@ -99,13 +99,12 @@ body.appear {
 header {
   height: var(--header-height);
 
-  --header-height: 140px;
+  --header-height: 196px;
 }
 
 @media (width < 900px) {
   header {
-    height: auto;
-    --header-height: 72px;
+    --header-height: 58px;
   }
 }
 
